# vlmrun-voxel51-plugin

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  document_analysis.py  fiftyone.yml  image_captioning.py  invoice_parsing.py  layout_detection.py  object_detection.py  person_detection.py  pyproject.toml  requirements.txt  setup.py  utils.py  video_transcription.py
assets/: README.md
gifs/: README.md
img/: README.md
tests/: test_operators.py
